added login and register paths/pages (draft 1)

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,9 +1,2 @@
 @import './components/auth.scss';
-
-* {
-  box-sizing: border-box;
-}
-
-.map-container {
-  height: 400px;
-}
+@import './components/base.scss';
