--- a/client/src/styles/components/auth.scss
+++ b/client/src/styles/components/auth.scss
@@ -1,16 +1,55 @@
+h1 {
+  text-align: center;
+}
 .form-page {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-}
-
-form {
-  border: 1px solid;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  input {
-    width: 50%;
+  border: 0px solid;
+  height: 100vh;
+  form {
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 40%;
+    min-width: 500px;
+    margin: 30px;
+    padding: 30px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 0px;
+    h1 {
+      width: 100%;
+      padding: 0px 0px 20px 0px;
+      margin: 0px 0px 20px 0px;
+      font-size: 1.5em;
+      border-bottom: 0.5px solid rgba(0, 0, 0, 0.4);
+      text-align: center;
+    }
+    p {
+      color: rgba(0, 0, 0, 0.6);
+    }
+    input {
+      width: 100%;
+      margin: 5px 0px 10px 0px;
+      padding: 20px;
+      border: 0.5px solid rgba(0, 0, 0, 0.4);
+      border-radius: 10px;
+      font-size: 1em;
+      font-family: 'Quicksand', sans-serif;
+    }
+    button {
+      margin-top: 15px;
+      padding: 15px;
+      width: 100%;
+      background-color: rgb(9, 179, 0);
+      border: none;
+      border-radius: 5px;
+      font-size: 1.1em;
+      color: rgba(255, 255, 255, 1);
+      font-family: 'Quicksand', sans-serif;
+      font-weight: 500;
+    }
   }
 }
+
