--- a/client/src/styles/components/auth.scss
+++ b/client/src/styles/components/auth.scss
@@ -4,14 +4,18 @@ h1 {
 .form-page {
   display: flex;
   justify-content: center;
+  align-items: center;
   border: 0px solid;
   height: 100vh;
+  margin: 0px;
   form {
+    position: fixed;
     border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
+    display: block;
     width: 40%;
     min-width: 500px;
     margin: 30px;
@@ -28,6 +32,18 @@ h1 {
     }
     p {
       color: rgba(0, 0, 0, 0.6);
+      margin: -5px 0 15px;
+      text-align: center;
+    }
+    .auth-error {
+      font-size: 0.8em;
+      color: rgb(255, 0, 0);
+      margin: 0px 0px 5px 0px;
+      text-align: left;
+    }
+    .cent {
+      text-align: center;
+      margin: 0px 0px 0px 0px;
     }
     input {
       width: 100%;
