--- a/client/src/styles/components/base.scss
+++ b/client/src/styles/components/base.scss
@@ -1,10 +1,21 @@
 * {
   box-sizing: border-box;
+  margin: 0px;
 }
 
 body {
   font-family: 'Quicksand', sans-serif;
   font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
+#main-wrapper {
+  width: 100%;
+  height: 100vh;
+  margin: 0px;
 }
 
 .map-container {
