--- a/client/src/styles/components/navbarpage.scss
+++ b/client/src/styles/components/navbarpage.scss
@@ -1,14 +1,28 @@
 header {
   width: 100%;
+  height: 50px;
   nav {
-    padding: 15px;
-    border: none;
-    background-color: rgba(9, 179, 0);
+    position: fixed;
+    width: 100%;
+    padding: 20px;
+    border-bottom: 0.5px solid rgba(9, 179, 0);
+    background-color: rgb(9, 179, 0, 0.2);
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     a {
-      color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0, 0.7);
+      font-weight: 500;
+    }
+    a:hover {
+      color: rgb(0, 0, 0, 1);
+    }
+    .nav-right {
+      display: flex;
+      justify-content: space-around;
+      a {
+        margin: 0px 15px;
+      }
     }
   }
 }
