--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './components/auth.scss';
 @import './components/base.scss';
-@import './components/ParksIndex.scss';
+@import './components/parks/parksIndex.scss';
+@import './components/parks/park.scss';
 @import './components/navbarpage.scss';
