added data for the broads and lake district and started profile page with favourites

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,3 +2,4 @@
 @import './components/base.scss';
 @import './components/ParksIndex.scss';
 @import './components/navbarpage.scss';
+@import './components/profilepage.scss';
