np page half there

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,8 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import './variables';
 @import './components/auth.scss';
 @import './components/base.scss';
 @import './components/parks/parksIndex.scss';
 @import './components/parks/park.scss';
 @import './components/navbarpage.scss';
+
