--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -1,2 +1,93 @@
 // @import '~react-photo-gallery/styles/scss/image-gallery.scss'
 
+.np-page-container {
+  margin-left: 0;
+  margin-right: auto;
+  margin-top: 15px;
+
+  .np-carousel-container{
+    position: relative;
+    height: 40vh;
+    width: 100%;
+    // border: 3px solid red;
+    .np-img {
+      height: 100%; 
+      width: 100%;
+      object-fit: cover;
+    }
+    .park-text{
+      position: absolute;
+      top: 0;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      .park-desc {
+        // border: 1px solid lightgreen;
+        width: 25%;
+        height: 100%;
+        margin-bottom: 0;
+        background: rgba(0,0,0,0.5);
+        display: flex;
+        p {
+          color: white;
+          padding: 0 10px;
+          display: inline-block;
+          align-self: flex-end ;
+        }
+      }
+      h1 {
+        // border: 1px solid lightgreen;
+        width: 75%;
+        margin-bottom: 0;
+        color: white;
+      }
+    }
+  }
+
+  .np-bottom-container {
+    // position: relative;
+    margin-top: 20px;
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    justify-content:space-around;
+
+    .np-attractions {
+      border: 2px solid red;
+      border-radius: 8px;
+      height: 100%;
+      width: 45%;
+      .np-attractions-title{
+        width: 100%;
+        height: 50%;
+        position: relative;
+        .attractions-img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+          overflow: hidden;
+        }
+        h2 {
+          position: absolute;
+          color: white;
+          z-index: 100;
+          padding: 10px;
+        }
+      }
+        .np-attractions-info {
+          padding: 10px;
+      }
+    }
+    .np-reviews{
+      border: 2px solid red;
+      border-radius: 8px;
+      // position: absolute;
+      height: 100%;
+      width: 45%;
+    }
+
+  }
+}
