--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'react-image-gallery/styles/scss/image-gallery.scss';
 @import './variables';
 @import './components/auth.scss';
 @import './components/base.scss';
@@ -7,3 +8,4 @@
 @import './components/navbarpage.scss';
 
 @import './components/profilepage.scss';
+@import './components/carousel/carousel.scss';
