--- a/client/src/styles/components/profilepage.scss
+++ b/client/src/styles/components/profilepage.scss
@@ -1,28 +1,32 @@
-.profile-page {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid;
-  height: 100vh;
-  margin: 0px;
+// .profile-page {
+//   display: flex;
+//   justify-content: space-around;
+//   align-items: center;
+//   border: 1px solid;
+//   height: 100vh;
+//   margin: 0px;
 
-  .row-one {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: 1px solid;
-  }
+//   .row-one {
+//     width: 100%;
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+//     border: 1px solid;
+//   }
 
-  .col-one {
-    width: calc(100% / 2);
-    border: 1px solid;
-    padding: 20px;
-  }
+//   .col-one {
+//     width: calc(100% / 2);
+//     border: 1px solid;
+//     padding: 20px;
+//   }
 
-  .col-two {
-    width: calc(100% / 4);
-    border: 1px solid;
-    padding: 20px;
-  }
+//   .col-two {
+//     width: calc(100% / 4);
+//     border: 1px solid;
+//     padding: 20px;
+//   }
+// }
+
+a {
+  color: rgb(6, 129, 0);
 }
