--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -11,15 +11,18 @@
     height: 40vh;
     width: 100%;
 
-    // border: 3px solid red;
-    .slider {
+    .slick-slide {
+      height: 40vh;
+      width: 100%;
+      // display: flex !important;
+      // align-items: center;
+      // justify-content: center;
       .np-img {
         height: 100%;
-        width: 100%;
+        width: 100% !important;
         object-fit: cover;
       }
     }
-
 
     .park-text {
       position: absolute;
@@ -68,39 +71,42 @@
       height: 100%;
       width: 45%;
       background-color: $pale-green;
-      &.np-attractions-title {
-        width: 100%;
-        height: 50%;
-        position: relative;
-        &.attractions-img {
-          position: absolute;
-          top: 0;
-          left: 0;
-          height: 100%;
+
+        &.np-attractions-title {
           width: 100%;
-          object-fit: cover;
-          overflow: hidden;
+          height: 50%;
+          position: relative;
+          &.attractions-img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            overflow: hidden;
+          }
+          &h2 {
+            position: absolute;
+            color: white;
+            z-index: 100;
+            padding: 10px;
+          }
         }
-        &h2 {
-          position: absolute;
-          color: white;
-          z-index: 100;
+  
+        &.np-attractions-info {
           padding: 10px;
+  
         }
-      }
-
-      &.np-attractions-info {
-        padding: 10px;
-
-      }
-
-      &.np-more-info {
-        padding: 10px;
-        text-align: right;
-        right: 0;
-      }
-
+  
+        &.np-more-info {
+          padding: 10px;
+          text-align: right;
+          right: 0;
+        }
+  
     }
+
+
     .np-stuff{
       border: 2px solid $drk-green;
       height: 100%;
