--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -1,29 +1,41 @@
 // @import '~react-photo-gallery/styles/scss/image-gallery.scss'
 
+
+
 .np-page-container {
   margin-left: 0;
   margin-right: auto;
   margin-top: 15px;
   background-color: rgb(9, 179, 0, 0.2);
-  background-image: url('../../../../src/assets/Grass.jpeg');
+  background-image: none;
 
+  .slick-arrow {
+    height: 100px;
+    width: 100px;
+    z-index: 10;
+  }
+
+  // * Bottom half of page
   .np-carousel-container {
     position: relative;
     height: 40vh;
     width: 100%;
 
     .slick-slide {
-      display: flex !important;
-      align-items: center;
-      justify-content: center;
       height: 40vh;
       width: 100vw;
 
       .np-img {
+        vertical-align: middle;
         height: 100%;
         width: 100% !important;
         object-fit: contain;
       }
+
+    }
+
+    .slick-dots {
+      top: 90%;
     }
 
     .park-text {
@@ -58,6 +70,8 @@
     }
   }
 
+
+  // * Bottom half of page
   .np-bottom-container {
     // position: relative;
     margin-top: 20px;
@@ -73,57 +87,91 @@
       height: 100%;
       width: 45%;
       background-color: $pale-green;
+      position: relative;
 
-        &.np-attractions-title {
-          width: 100%;
-          height: 50%;
-          position: relative;
-          &.attractions-img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            overflow: hidden;
+      .slick-slider {
+        height: inherit !important;
+        .slick-list {
+          height: inherit !important;
+          .slick-track {
+            height: inherit !important;
+            div {
+              height: inherit ;
+              padding: 0 5px;
+              .np-attractions-title {
+                width: 100%;
+                height: 45%;
+                position: relative;
+                .attractions-img {
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  height: 100%;
+                  width: 100%;
+                  object-fit: cover;
+                  overflow: hidden;
+                  border-radius: 8px 8px 0 0;
+                }
+                h2 {
+                  position: absolute;
+                  color: white;
+                  z-index: 100;
+                  padding: 10px;
+                }
+
+                .np-attractions-info {
+                  padding: 10px;
+                }
+          
+                .np-more-info {
+                  padding: 10px;
+                  text-align: right;
+                  right: 0;
+                }
+              }
+            }
           }
-          &h2 {
-            position: absolute;
-            color: white;
-            z-index: 100;
-            padding: 10px;
-          }
         }
-  
-        &.np-attractions-info {
-          padding: 10px;
-  
-        }
-  
-        &.np-more-info {
-          padding: 10px;
-          text-align: right;
-          right: 0;
-        }
-  
+
+
+
+      }
+      .slick-slide {
+        width: 100%;
+        height: 100%;
+
+      }
+
+
+      &.np-attractions-info {
+        padding: 10px;
+
+      }
+
+      &.np-more-info {
+        padding: 10px;
+        text-align: right;
+        right: 0;
+      }
+
     }
 
 
-    .np-stuff{
+    .np-stuff {
       border: 2px solid $drk-green;
       height: 100%;
       width: 45%;
       border-radius: 8px;
       padding: 10px;
       background-color: $pale-green;
-      .np-activities{
+
+      .np-activities {
         span {
           font-size: 30px;
         }
       }
-      .np-reviews {
 
-      }
+      .np-reviews {}
     }
 
 
