--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'react-image-gallery/styles/scss/image-gallery.scss';
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&family=Courgette&display=swap');
+
 @import './variables';
 @import './components/auth.scss';
 @import './components/base.scss';
