--- a/client/src/styles/components/auth.css
+++ b/client/src/styles/components/auth.css
@@ -19,14 +19,15 @@ h1 {
 
 .form-page form {
   border: none;
+  background-color: rgba(225, 225, 225, 0.4);
   display: block;
   width: 40%;
   min-width: 500px;
   margin: 30px;
   padding: 30px;
-  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 0px;
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 6px;
 }
 
 .form-page form h1 {
