--- a/client/src/styles/components/parks/parksIndex.scss
+++ b/client/src/styles/components/parks/parksIndex.scss
@@ -3,6 +3,7 @@
   height: 100%;
   min-height: 100vh;
   background-image: url('../../../../public/assets/parkImgs/BBNP/PYF1.jpeg');
+  // background-image: url('../../../../public/assets/parkImgs/NFNP/NFNP3.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -26,6 +27,8 @@
       .card{
         height: inherit;
         width: inherit;
+        overflow: hidden;
+
         .slick-arrow {
           height: 100px;
           width: 100px;
@@ -53,6 +56,12 @@
             margin-top: 20px;
           }
         }
+
+        -webkit-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out; 
+      }
+      .card:hover {
+        transform: scale(1.1); 
       }
     }
   }
