--- a/client/src/styles/components/base.scss
+++ b/client/src/styles/components/base.scss
@@ -10,6 +10,11 @@ body {
 
 a {
   text-decoration: none;
+  color: rgb(6, 129, 0);
+}
+
+a:hover {
+  color: rgba(9, 179, 0, 1);
 }
 
 #main-wrapper {
