--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -22,11 +22,12 @@ h2, h3 {
     z-index: 10;
   }
 
-  // * Bottom half of page
+  // * Top half of page
   .np-carousel-container {
     position: relative;
     height: 40vh;
     width: 100%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 
     .slick-slide {
       height: 40vh;
@@ -90,8 +91,10 @@ h2, h3 {
     .np-attractions {
       box-sizing: border-box;
       border-radius: 8px;
+      // border: 1px solid red;
       height: 100%;
       width: 45%;
+      max-width: 550px;
       position: relative;
       .slick-slider {
         height: inherit !important;
@@ -102,46 +105,52 @@ h2, h3 {
             div {
               height: inherit ;
               padding: 0 5px;
-              .np-attractions-title {
-                width: 100%;
-                height: 45%;
-                position: relative;
-                .attractions-img {
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  height: 100%;
+
+
+              .np-attraction{
+                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+                padding: 0;
+
+                .np-attractions-title {
                   width: 100%;
-                  object-fit: cover;
-                  overflow: hidden;
-                  border-radius: 6px 6px 0 0;
+                  height: 45%;
+                  position: relative;
+                  .attractions-img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    overflow: hidden;
+                    border-radius: 6px 6px 0 0;
+                  }
+                  h2 {
+                    position: absolute;
+                    color: white;
+                    z-index: 100;
+                    padding: 10px;
+                  }
                 }
-                h2 {
-                  position: absolute;
-                  color: white;
-                  z-index: 100;
-                  padding: 10px;
+  
+                .np-attractions-info {
+                  padding: 15px;
+                  background-color: rgba(225, 225, 225, .6);
+                  border-radius: 0 0 6px 6px;
+                  h2 {
+                    text-align: center;
+                    font-size: 28px;
+                  }
+                  p {
+                    margin-bottom: 5px;
+                  }
+                  .np-more-info {
+                    color: blue;
+                    text-align:right;
+                  }
                 }
-              }
 
-
-              .np-attractions-info {
-                padding: 15px;
-                background-color: rgba(225, 225, 225, .6);
-                border-radius: 0 0 6px 6px;
-                h2 {
-                  text-align: center;
-                  font-size: 28px;
-                }
-                p {
-                  margin-bottom: 5px;
-                }
-                .np-more-info {
-                  color: blue;
-                  text-align:right;
-                }
               }
-        
 
             }
           }
@@ -159,9 +168,11 @@ h2, h3 {
       border: 2px solid $drk-green;
       height: 100%;
       width: 45%;
+      max-width: 550px;
       border-radius: 8px;
       padding: 10px;
       background-color: rgba(225, 225, 225, .6);
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 
       .np-activities {
         span {
