--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -6,3 +6,6 @@ $lgt-green: #9ABA12;
 $pale-green: #e2fab5;
 $drk-cream: #D5CE58;
 $lgt-cream: #EBF094;
+
+// ? Main title font
+$title-main: 'Courgette', cursive;
