--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -187,13 +187,55 @@ h2, h3 {
       }
 
       .np-reviews {
-
-        button {
-          // display: flex;
-          // justify-content: center;
-          // align-items: center;
-          // border: 3px solid green;
+        h4 {
+          margin-bottom: 5px;
         }
+        .review-container{
+          display: flex;
+          justify-content: space-between;
+
+          :root {
+            --star-size: 60px;
+            --star-color: #fff;
+            --star-background: #fc0;
+          }
+
+          .review-stars {
+            // align-items: center;
+            // color: gold;
+            // text-shadow: #FC0 1px 0 5px;
+            // display: inline;
+            // font-size: 20px;
+
+            // .Stars{
+            //   --percent: calc(var(--rating) / 5 * 100%);
+            //   display: inline-block;
+            //   font-size: var(--star-size);
+            //   font-family: Times; // make sure ★ appears correctly
+            //   line-height: 1;
+    
+            //   &::before {
+            //     content: '★★★★★';
+            //     letter-spacing: 3px;
+            //     background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+            //     -webkit-background-clip: text;
+            //     -webkit-text-fill-color: transparent;
+            //   }
+
+            // }
+
+          }
+            
+  
+          button {
+            height: 30px;
+            background-color: gold;
+            vertical-align: middle;
+          }
+        }
+        
+
+
       }
     }
   }
