--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -201,11 +201,11 @@ h2, h3 {
           }
 
           .review-stars {
-            // align-items: center;
-            // color: gold;
-            // text-shadow: #FC0 1px 0 5px;
-            // display: inline;
-            // font-size: 20px;
+            align-items: center;
+            color: gold;
+            text-shadow: #FC0 1px 0 5px;
+            display: inline;
+            font-size: 20px;
 
             // .Stars{
             //   --percent: calc(var(--rating) / 5 * 100%);
