--- a/client/src/styles/components/base.scss
+++ b/client/src/styles/components/base.scss
@@ -23,8 +23,9 @@ a:hover {
   margin: 0px;
 }
 
-.home-title {
+#home-title {
   font-size: 2em;
+  color: $drk-green;
 }
 
 .map-container {
@@ -87,8 +88,8 @@ a:hover {
 }
 @media screen and (min-width: 1002px) and (min-height: 1002px) {
   .main-map-container {
-    height: 1000px;
-    width: 1000px;
+    height: 940px;
+    width: 940px;
   }
 
   .mapboxgl-popup {
@@ -103,7 +104,7 @@ a:hover {
 
 .clicked-park-name{
   color: white;
-  background-color: rgb(0, 0, 0, 0.6);
+  background-color: rgba(15, 40, 12, 0.6);
   font-size: 2.2rem;
   border-radius: 15px;
   // mix-blend-mode: difference;
@@ -117,4 +118,11 @@ a:hover {
 .main-map-btns-container{
   display: flex;
   justify-content: center;
+  button{
+  color: white;
+  background-color: rgba(15, 40, 12, 0.6);
+  font-size: 1.4rem;
+  border-radius: 15px;
+  padding: 7px 14px;
+  }
 }
