--- a/client/src/styles/components/profilepage.scss
+++ b/client/src/styles/components/profilepage.scss
@@ -34,3 +34,8 @@ a {
 h3 {
   font-size: 1.3em;
 }
+
+.profile-container {
+  background-color: rgba(225, 225, 225, .6);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+}
