--- a/client/src/styles/components/auth.scss
+++ b/client/src/styles/components/auth.scss
@@ -63,8 +63,16 @@ h1 {
       border-radius: 5px;
       font-size: 1.1em;
       color: rgba(255, 255, 255, 1);
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
       font-family: 'Quicksand', sans-serif;
       font-weight: 500;
+    }
+    
+    button:hover {
+      box-shadow: 0 0.5em 1.5em -0.5em #14a73e98;
+    }
+    button:active {
+      box-shadow: 0 0.3em 1em -0.5em #14a73e98;
     }
   }
 }
