--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -30,6 +30,10 @@ h2, h3 {
     width: 100%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 
+    :hover {
+      cursor: pointer;
+    }
+
     .slick-slide {
       height: 40vh;
       width: 100vw;
