--- a/client/src/styles/components/navbarpage.scss
+++ b/client/src/styles/components/navbarpage.scss
@@ -1,12 +1,14 @@
 header {
   width: 100%;
   height: 50px;
+
   nav {
+    z-index: 100;
     position: fixed;
     width: 100%;
     padding: 20px;
     border-bottom: 0.5px solid rgba(9, 179, 0);
-    background-color: rgb(9, 179, 0, 0.2);
+    background-color: rgb(9, 179, 0, 0.4);
     display: flex;
     justify-content: space-between;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
