--- a/client/src/styles/components/navbarpage.scss
+++ b/client/src/styles/components/navbarpage.scss
@@ -7,17 +7,17 @@ header {
     position: fixed;
     width: 100%;
     padding: 20px;
-    border-bottom: 0.5px solid rgba(9, 179, 0);
-    background-color: rgb(9, 179, 0, 0.4);
+    border-bottom: 0.5px solid rgb(9, 179, 0);
+    background-color: rgba(9, 179, 0, 0.4);
     display: flex;
     justify-content: space-between;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     a {
-      color: rgb(0, 0, 0, 0.7);
+      color: rgba(0, 0, 0, 0.7);
       font-weight: 500;
     }
     a:hover {
-      color: rgb(0, 0, 0, 1);
+      color: rgba(0, 0, 0, 1);
     }
     .nav-right {
       display: flex;
