--- a/client/src/styles/components/parks/park.scss
+++ b/client/src/styles/components/parks/park.scss
@@ -1,4 +1,3 @@
-// @import '~react-photo-gallery/styles/scss/image-gallery.scss'
 
 h1 {
   font-family: 'Courgette', cursive;
@@ -14,7 +13,7 @@ h2, h3 {
   margin-left: 0;
   margin-right: auto;
   margin-top: 15px;
-  background-color: rgb(9, 179, 0, 0.2);
+  background-color: rgba(9, 179, 0, 0.2);
   background-image: none;
 
   .slick-arrow {
@@ -142,7 +141,7 @@ h2, h3 {
                 }
   
                 .np-attractions-info {
-                  padding: 15px;
+                  padding: 1em;
                   background-color: rgba(225, 225, 225, .6);
                   border-radius: 0 0 6px 6px;
                   h2 {
@@ -183,18 +182,29 @@ h2, h3 {
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
 
       .np-activities {
+        height: 70%;
         span {
-          font-size: 30px;
+          font-size: 1.8em;
+          margin-top: .5em;
         }
         p {
           margin-bottom: 0;
+          line-height: 1.5em;
+          font-size: .9em;
+        }
+        li {
+          line-height: 1.2em;
         }
         a {
           color: blue;
+          font-size: .9em;
+
         }
       }
 
       .np-reviews {
+        height: 30%;
+
         h4 {
           margin-bottom: 5px;
         }
@@ -213,7 +223,7 @@ h2, h3 {
             color: gold;
             text-shadow: #FC0 1px 0 5px;
             display: inline;
-            font-size: 20px;
+            font-size: 1em;
           }
             
           .buttons-container {
